--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
+* {
+  padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+}
+
+html{
+  background-color: rgb(156, 156, 156);
+}
+
 .App {
+  font-family: sans-serif;
   text-align: center;
+  background-color: rgb(156, 156, 156);
+  padding: 50px;
+
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+li {
+  letter-spacing: 0.5px;
+  text-align: left;
+  width: 400px;
+  padding: 10px;
+  border-left: 4px solid cyan;
+  background-color: rgb(235, 251, 255);
+  overflow: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+  list-style: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.lists {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: rgb(156, 156, 156);
+  margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.delete-button {
+  padding: 10.5px;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 3px;
+  background-color: rgb(255, 121, 121);
+  font-weight: bold;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.delete-button:hover {
+  background-color: rgb(255, 204, 204);
+}
+
+.input-wrapper {
+  padding: 30px;
+}
+
+input {
+  padding: 10px;
+  width: 300px;
+}
+
+.add-button {
+  width: 70px;
+  padding: 10px;
+  background-color: rgb(121, 255, 132);
+  border: 1px solid black;
+  border-radius: 3px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.add-button:hover {
+  background-color: rgb(199, 255, 204);
 }
